--- a/Public/css/main.css
+++ b/Public/css/main.css
@@ -6,17 +6,15 @@
     -moz-transition: all .3s ease;
     -o-transition: all .3s ease;
 }
-img{ width: auto; height: auto;max-width: 100%; display: block; }
+
 nav a {text-decoration: none;}
 body {
     color: white;
     height: auto;
     margin: 0;
     width: 100%;
-    background-color: #FFFFFF;
-  /*   background-attachment: fixed;
-   background-position: center center;*/
-	background-size:100%;
+    background-color: #707070;
+    background-size: 100%;
     background-repeat: no-repeat;
     user-select: none;
     -webkit-user-select: none;
@@ -30,10 +28,7 @@ body {
     display: none;
 }
 */
-h1 {
-  font-size: 1.5em;
-  margin: 0.67em 0;
-}
+
 header {
     width: 964px;
     height: 60px;
@@ -47,7 +42,7 @@ ul {
     padding: 0;
 }
 
-li,a {
+li, ul a {
     width: 17%;
     height: 60px;
     list-style: none;
@@ -78,6 +73,29 @@ li,a {
     color: white;
 }
 
+.top-navigator {
+	display: flex;
+	width: auto;
+	height: 60px;
+	justify-content: flex-end;
+	overflow: hidden;
+	align-items: center;
+	position: relative;
+}
+.top-navigator > .nav-item {
+	width: 96px;
+	display: flex;
+	justify-content: center;
+}
+.top-navigator > .flash{
+	position: absolute;
+	height: 1px;
+	width: 65px;
+	background-color: white;
+	bottom: 15px;
+	right: 15px;
+}
+
 #search {
     padding-right: 10px;
 }
@@ -100,7 +118,7 @@ li,a {
     height: 23px;
     padding: 0;
     background-color: white;
-    background-image: url(http://www.chuqv.com/Public/img/search.png);
+    background-image: url(/img/search.png);
     background-size: 100%;
 }
 
@@ -127,7 +145,7 @@ li,a {
     height: 40px;
     margin-top: 3px;
     margin-right: auto;
-    background-image: url(http://www.chuqv.com/Public/img/sign_in.png);
+    background-image: url(/img/sign_in.png);
 }
 
 #flash {
@@ -177,7 +195,7 @@ li,a {
 .logincanvas-logo-img {
     width: 233px;
     height: 75px;
-    background-image: url(http://www.chuqv.com/Public/img/PC_login_logo.png);
+    background-image: url(/output/img/PC_login_logo.png);
 }
 .logincanvas-loginbox {
     height: 50px;
@@ -192,12 +210,12 @@ li,a {
 .userLogin {
     left: 10px;
     width: 43px;
-    background-image: url(http://www.chuqv.com/Public/img/login_user.png);
+    background-image: url(/img/login_user.png);
 }
 .agentLogin {
     left: 54px;
     width: 43px;
-    background-image: url(http://www.chuqv.com/Public/img/login_agent.png);
+    background-image: url(/img/login_agent.png);
 }
 .logincanvas-loginbox-input {
     float: left;
@@ -291,7 +309,7 @@ li,a {
     width: 40px;
     height: 40px;
     border-radius: 20px;
-    background-image: url(http://www.chuqv.com/Public/img/PC_login.png);
+    background-image: url(/img/PC_login.png);
     cursor: pointer;
 }
 
@@ -323,7 +341,7 @@ li,a {
     height: 20px;
     border-radius: 100%;
     background-color: rgba(255, 255, 255, 0.5);
-    background-image: url(http://www.chuqv.com/Public/img/schedule/title_userPhoto.png);
+    background-image: url(/img/schedule/title_userPhoto.png);
     margin: 5px;
 }
 .userBar-any-label {
@@ -342,6 +360,6 @@ li,a {
     float: left;
     width: 16px;
     height: 16px;
-    background-image: url(http://www.chuqv.com/Public/img/schedule/user_sign_out.png);
+    background-image: url(/img/schedule/user_sign_out.png);
     margin: 7px 8px;
 }
