数据库里取出城市

--- a/Application/Home/View/Order/order.html
+++ b/Application/Home/View/Order/order.html
@@ -66,7 +66,17 @@
 							<!-- <div class="title-searchBox"></div> -->
 						</div>
 						<div class="optionPool">
-				<!-- Country Pool -->
+				<!-- Country Pool111 -->
+
+
+							<volist name="lists" id="vo">
+								<div class="optionBox">
+									<div class="label">{$vo.ccity}</div>
+									<div class="button"><div class="x">&times;</div></div>
+								</div>
+							</volist>
+
+
 							<div class="optionBox">
 								<div class="label">奥地利</div>
 								<div class="button"><div class="x">&times;</div></div>
