根据城市查询景点

--- a/Application/Home/View/Order/order.html
+++ b/Application/Home/View/Order/order.html
@@ -65,50 +65,15 @@
 							<div class="title-note">可多选</div>
 							<!-- <div class="title-searchBox"></div> -->
 						</div>
-						<div class="optionPool">
+						<div class="optionPool" id="country">
 				<!-- Country Pool111 -->
-
 
 							<volist name="lists" id="vo">
 								<div class="optionBox">
-									<div class="label">{$vo.ccity}</div>
-									<div class="button"><div class="x">&times;</div></div>
+									<div class="label">{$vo.country}</div>
+									<div class="button" id="{$vo.topicid}"><div class="x">&times;</div></div>
 								</div>
 							</volist>
-
-
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
 
 						</div>
 					</div>
@@ -119,184 +84,8 @@
 							<div class="title-note">可多选</div>
 							<!-- <div class="title-searchBox"></div> -->
 						</div>
-						<div class="optionPool">
+						<div id="city" class="optionPool">
 				<!-- City Pool -->
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
-							<div class="optionBox">
-								<div class="label">奥地利</div>
-								<div class="button"><div class="x">&times;</div></div>
-							</div>
 
 						</div>
 					</div>
@@ -466,9 +255,31 @@
         <script src="{$Think.const.JS_PATH}/jquery-2.1.4.min.js"></script>
         <script src="{$Think.const.JS_PATH}/jquery.datetimepicker.full.js"></script>
         <script src="{$Think.const.JS_PATH}/order.js"></script>
-		<script src="{$Think.const.JS_PATH}/jquery-ui-1.10.1.min.js">
+		<script src="{$Think.const.JS_PATH}/jquery-ui-1.10.1.min.js"></script>
+
+		<script type="text/javascript" language="javascript">
+
+			Array.prototype.indexOf = function(val) {
+				for (var i = 0; i < this.length; i++) {
+					if (this[i] == val) return i;
+				}
+				return -1;
+			};
+
+
+			Array.prototype.remove = function(val) {
+				var index = this.indexOf(val);
+				if (index > -1) {
+					this.splice(index, 1);
+				}
+			};
+
+
+			var selectedCountryArray = new Array()
+			var selectedCityArray = new Array()
 
 		</script>
+
     </body>
 
 
