--- a/Application/Home/View/Order/order.html
+++ b/Application/Home/View/Order/order.html
@@ -275,8 +275,9 @@
 			};
 
 
-			var selectedCountryArray = new Array()
-			var selectedCityArray = new Array()
+			var selectedCountryArray = new Array();
+			var selectedCityArray = new Array();
+			var allProductArray = new Array();
 
 		</script>
 
