--- a/Application/Home/View/Order/order.html
+++ b/Application/Home/View/Order/order.html
@@ -278,6 +278,7 @@
 			var selectedCountryArray = new Array();
 			var selectedCityArray = new Array();
 			var allProductArray = new Array();
+			var selectedProductArray = new Array();
 
 		</script>
 
