--- a/Public/css/main.css
+++ b/Public/css/main.css
@@ -16,10 +16,10 @@ body {
     background-color: #707070;
     background-size: 100%;
     background-repeat: no-repeat;
-    user-select: none;
+    /*user-select: none;
     -webkit-user-select: none;
     -moz-user-select: none;
-    -o-user-select: none;
+    -o-user-select: none;*/
 /*    display: none;*/
 /*    overflow-x: hidden;*/
 }
@@ -33,6 +33,9 @@ header {
     width: 964px;
     height: 60px;
     margin: 20px auto 0 auto;
+	/* Make sure the message box won't be cover */
+	position: relative;
+	z-index: 1;
 }
 
 ul {
@@ -86,6 +89,7 @@ li, ul a {
 	width: 96px;
 	display: flex;
 	justify-content: center;
+	cursor: pointer;
 }
 .top-navigator > .flash{
 	position: absolute;
@@ -118,7 +122,7 @@ li, ul a {
     height: 23px;
     padding: 0;
     background-color: white;
-    background-image: url(http://www.chuqv.com/chuqv/Public/img/search.png);
+    background-image: url(/Public/img/search.png);
     background-size: 100%;
 }
 
@@ -145,7 +149,7 @@ li, ul a {
     height: 40px;
     margin-top: 3px;
     margin-right: auto;
-    background-image: url(/img/sign_in.png);
+    background-image: url(/Public/img/sign_in.png);
 }
 
 #flash {
@@ -321,6 +325,7 @@ li, ul a {
 }
 
 .userBar {
+	float: left;
     width: 118px;
     margin: 8px 0 0 10px;
     font-size: 14px;
@@ -341,7 +346,7 @@ li, ul a {
     height: 20px;
     border-radius: 100%;
     background-color: rgba(255, 255, 255, 0.5);
-    background-image: url(http://www.chuqv.com/chuqv/Public/img/schedule/title_userPhoto.png);
+    background-image: url(/Public/img/schedule/title_userPhoto.png);
     margin: 5px;
 }
 .userBar-any-label {
@@ -352,6 +357,9 @@ li, ul a {
 .userBar-bottom {
     height: 30px;
     cursor: pointer;
+	/* Make sure this area won't be cover by message bar */
+	position: relative;
+	z-index: 1;
 }
 .userBar-bottom:hover {
     background-color: rgba(255, 255, 255, 0.2);
@@ -360,6 +368,115 @@ li, ul a {
     float: left;
     width: 16px;
     height: 16px;
-    background-image: url(http://www.chuqv.com/chuqv/Public/img/schedule/user_sign_out.png);
+    background-image: url(/Public/img/schedule/user_sign_out.png);
     margin: 7px 8px;
 }
+
+/*Message*/
+.msg {
+	float: left;
+	width: 20px;
+	height: 16px;
+	background-image: url(/Public/img/msg-icon.png);
+	margin-top: 15px;
+	cursor: pointer;
+	position: relative;
+	margin-left: 5px;
+}
+.msg > .status {
+	position: absolute;
+	top: -3px;
+	right: -3px;
+	width: 6px;
+	height: 6px;
+	border-radius: 100%;
+	background-color: #ff1e00;
+	display: none;
+}
+.unread > .status {
+	display: block;
+}
+.msg > .detail-box {
+	position: absolute;
+	top: 34px;
+	right: -14px;
+	width: 280px;
+	height: 210px;
+	background-color: rgba(0, 0, 0, .3);
+	border-radius: 2px;
+	cursor: default;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	font-size: 14px;
+	display: none;
+}
+.onclick .detail-box {
+	display: block;
+}
+	.detail-box > .delta {
+		position: absolute;
+		border-left: 3px solid transparent;
+		border-right: 3px solid transparent;
+		border-bottom: 4px solid rgba(0, 0, 0, .3);
+		top: -4px;
+		right: 20px;
+	}
+	.detail-box > .title {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 260px;
+		height: 33px;
+		border-style: solid;
+		border-width: 0 0 1px 0;
+		border-color: rgba(255, 255, 255, .2);
+	}
+	.detail-box > .content {
+		width: 280px;
+		height: 176px;
+		overflow-y: scroll;
+		overflow-x: hidden;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	.detail-box > .content::-webkit-scrollbar {
+		background-color: rgba(0, 0, 0, 0);
+		width: 4px;
+	}
+	.detail-box > .content::-webkit-scrollbar-thumb {
+		background-color: rgba(255, 255, 255, 0.6);
+		border-radius: 4px;
+	}
+	.content > .message-bar {
+		display: flex;
+		flex: 0 0 auto;
+		padding: 0 10px;
+		justify-content: flex-start;
+		align-items: center;
+		line-height: normal;
+		height: 58px;
+		text-align: justify;
+		/*border-style: solid;
+		border-width: 0 0 1px 0;
+		border-color: rgba(255, 255, 255, .2);*/
+		cursor: pointer;
+	}
+	.content > .message-bar:hover {
+		background-color: rgba(255, 255, 255, .2);
+	}
+	.content > .message-bar:last-child {
+		border-width: 0;
+	}
+
+	.content > .split {
+		display: flex;
+		flex: 0 0 auto;
+		width: 260px;
+		height: 1px;
+		background-color: rgba(255, 255, 255, .2);
+	}
+	.content > .split:last-child {
+		display: none;
+	}
