提交初步处理

--- a/Application/Home/View/Order/preAddOrder.html
+++ b/Application/Home/View/Order/preAddOrder.html
@@ -77,7 +77,7 @@
             <volist name="lists" id="vo">
 
                 <div class="order">
-                    <div class="titleBar">
+                    <div id="{$vo.id2}" class="titleBar">
                         <div class="zh">{$vo.productname}</div>
                         <div class="en">Tour Montparnasse</div>
                     </div>
