实现用户信息切换

--- a/Application/Home/View/Order/preAddOrder.html
+++ b/Application/Home/View/Order/preAddOrder.html
@@ -280,18 +280,21 @@
         <div class="logincanvas-button" id="LoginTurnOff"></div>
     </div>
 </div>
-<script src="{$Think.const.JS_PATH}/jquery-2.1.4.min.js"></script>
-<script src="{$Think.const.JS_PATH}/jquery.datetimepicker.full.js"></script>
-<script src="{$Think.const.JS_PATH}/New-order.js"></script>
 
 
 <script type="text/javascript" language="javascript">
 
     var totalPrice = new Array();
-
-
+    var userArray = new Array();
 
 </script>
+
+<script src="{$Think.const.JS_PATH}/jquery-2.1.4.min.js"></script>
+<script src="{$Think.const.JS_PATH}/jquery.datetimepicker.full.js"></script>
+<script src="{$Think.const.JS_PATH}/New-order.js"></script>
+
+
+
 </body>
 
 
