--- a/Application/Home/View/Order/preAddOrder.html
+++ b/Application/Home/View/Order/preAddOrder.html
@@ -203,18 +203,18 @@
                 <div class="optChildBox">
                     <div class="optModel">
                         <div class="inputCmpnt">
-                            <input type="text" placeholder="姓名">
+                            <input name="contactName" type="text" placeholder="姓名">
                         </div>
                         <div class="inputCmpnt">
-                            <input type="text" placeholder="微信号">
+                            <input name="contactWebChat" type="text" placeholder="微信号">
                         </div>
                     </div>
                     <div class="optModel TBLINE" style="padding-top:0">
                         <div class="inputCmpnt">
-                            <input type="text" placeholder="电话号码">
+                            <input name="contactMobile" type="text" placeholder="电话号码">
                         </div>
                         <div class="inputCmpnt">
-                            <input type="text" placeholder="邮箱地址">
+                            <input name="contactMail" type="text" placeholder="邮箱地址">
                         </div>
                     </div>
 
@@ -235,7 +235,7 @@
                 </div>
                 <div class="optChildBox">
                     <div class="optModel">
-                        <textarea class="userNote" rows="8" cols="80" placeholder="是否携带儿童等"></textarea>
+                        <textarea name="guestInfo" class="userNote" rows="8" cols="80" placeholder="是否携带儿童等"></textarea>
                     </div>
                 </div>
 
