--- a/Public/css/pay.css
+++ b/Public/css/pay.css
@@ -59,7 +59,7 @@ body {background-image: url(http://www.chuqv.com/Public/img/backgroundimg.png);
 }
 
 .main > .titleBar {
-	height: 66px;
+	height: auto;
 	border-style: solid;
 	border-width: 0 0 1px 0;
 	border-color: rgba(255, 255, 255, .2);
