--- a/Home/View/Order/order.html
+++ b/Home/View/Order/order.html
@@ -209,7 +209,7 @@
 							<div class="content">
 								<div class="title-label">购票类型</div>
 								<div class="options">
-									<div class="option">成人票</div>
+									<div class="option selected">成人票</div>
 									<div class="option">儿童票</div>
 								</div>
 								<div class="title-label">门票时间</div>
