--- a/Public/css/order.css
+++ b/Public/css/order.css
@@ -377,10 +377,16 @@ body {background-image: url(http://www.chuqv.com/Public/img/backgroundimg.png);
 					background-color: rgba(255, 255, 255, .2);
 					display: flex;
 					justify-content: center;
+					border-style: solid;
+					border-width: 1px;
+					border-color: rgba(255, 255, 255, 0);
 					align-items: center;
 					font-size: 14px;
 					border-radius: 2px;
 					cursor: pointer;
+				}
+				.options > .selected {
+					border-color: rgba(255, 255, 255, 1);
 				}
 
 		/*button*/
